--- a/po/fi.po
+++ b/po/fi.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Stocks 0.2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-02-16 18:11+0200\n"
+"POT-Creation-Date: 2026-02-18 14:48+0200\n"
 "PO-Revision-Date: 2026-02-16 18:17+0200\n"
 "Last-Translator: Lauri Taimila <lauri.taimila@me.com>\n"
 "Language-Team: Finnish\n"
@@ -201,6 +201,19 @@ msgstr "Markkina"
 msgid "Updated just now."
 msgstr "Päivitetty juuri nyt."
 
+#: data/ui/BrowseModeSwitcher.blp:39
+msgid "List view"
+msgstr "Lista"
+
+#: data/ui/BrowseModeSwitcher.blp:67
+msgid "Grid view"
+msgstr "Ruudukko"
+
+#: Stocks/Ui/SplitView.cs:121
+#, csharp-format
+msgid "{0} removed"
+msgstr "{0} poistettu"
+
 #: Stocks/Ui/AddTickerPopover.cs:79 Stocks/Ui/AddTickerPopover.cs:154
 msgid "Search symbols"
 msgstr "Etsi symboleita"
@@ -276,21 +289,13 @@ msgstr "Aika"
 msgid "Range"
 msgstr "Väli"
 
-#~ msgid "List view"
-#~ msgstr "Lista"
+#: Stocks/Ui/TickerContextMenu.cs:21
+msgid "Remove"
+msgstr "Poista"
 
-#~ msgid "Grid view"
-#~ msgstr "Ruudukko"
+#: Stocks/Ui/TickerContextMenu.cs:25
+msgid "Refresh"
+msgstr "Päivitä"
 
 #~ msgid "Help"
 #~ msgstr "Ohje"
-
-#, csharp-format
-#~ msgid "{0} removed"
-#~ msgstr "{0} poistettu"
-
-#~ msgid "Remove"
-#~ msgstr "Poista"
-
-#~ msgid "Refresh"
-#~ msgstr "Päivitä"
